refactor: Externalize all configuration to environment variables
## Changes Made

### Configuration Externalizations
- **docker-compose.yml**: All hardcoded values now reference environment variables using ${VAR:-default} syntax
  - DATABASE_URL, MODELS_DIR, LOG_LEVEL, BATCH_SIZE, EPOCHS, VALIDATION_SPLIT, SCORE_BATCH_SIZE, RANDOM_SEED
  - Falls back to sensible defaults if env var not set

- **.env.example**: Enhanced documentation with comments explaining each variable's purpose
  - Database Configuration: DATABASE_URL, connection strings for local dev and Docker
  - Model Configuration: MODELS_DIR, RANDOM_SEED with explanations
  - Training Configuration: BATCH_SIZE, EPOCHS, VALIDATION_SPLIT with ranges
  - Scoring Configuration: SCORE_BATCH_SIZE explanation
  - Logging Configuration: LOG_LEVEL verbosity levels

- **src/training/train_churn.py**: Updated to use VALIDATION_SPLIT from config
  - Calculates test_size from (1 - config.validation_split)
  - Defaults to config values when not explicitly provided

- **src/scoring/score_accounts.py**: Updated to use SCORE_BATCH_SIZE from config
  - Uses config.score_batch_size when batch_size parameter is None
  - Allows both programmatic override and environment-based defaults

- **src/models/churn_model.py**: Already properly using config values
  - Verified model.train() uses self.config.batch_size and self.config.epochs
  - No code changes needed, already follows pattern

## Environment Variables Reference

All 8 configuration variables now properly externalized:

| Variable | Purpose | Default | Example |
|----------|---------|---------|---------|
| DATABASE_URL | PostgreSQL connection | postgresql://goinsight:goinsight_dev_pass@goinsight-postgres:5432/goinsight?sslmode=disable | Works both local (localhost) and Docker (container name) |
| MODELS_DIR | Model artifacts directory | models | /app/models in Docker |
| RANDOM_SEED | Reproducibility seed | 42 | Any integer |
| BATCH_SIZE | Training batch size | 32 | 16, 3

--- a/.env.example
+++ b/.env.example
@@ -16,12 +16,17 @@ MODELS_DIR=models
 RANDOM_SEED=42
 
 # Training Configuration
+# BATCH_SIZE: Number of samples per gradient update during training
 BATCH_SIZE=32
+# EPOCHS: Number of complete passes through the training dataset
 EPOCHS=50
+# VALIDATION_SPLIT: Fraction of training data to use for validation (1-this = test fraction)
 VALIDATION_SPLIT=0.2
 
 # Scoring Configuration
+# SCORE_BATCH_SIZE: Number of predictions to generate at once during batch scoring
 SCORE_BATCH_SIZE=1000
 
 # Logging
+# LOG_LEVEL: Logging verbosity (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
