--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,14 @@ services:
     build: .
     container_name: tens-insight
     environment:
-      - DATABASE_URL=postgresql://goinsight:goinsight_dev_pass@goinsight-postgres:5432/goinsight?sslmode=disable
-      - MODELS_DIR=/app/models
-      - LOG_LEVEL=INFO
+      - DATABASE_URL=${DATABASE_URL:-postgresql://goinsight:goinsight_dev_pass@goinsight-postgres:5432/goinsight?sslmode=disable}
+      - MODELS_DIR=${MODELS_DIR:-/app/models}
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - BATCH_SIZE=${BATCH_SIZE:-32}
+      - EPOCHS=${EPOCHS:-50}
+      - VALIDATION_SPLIT=${VALIDATION_SPLIT:-0.2}
+      - SCORE_BATCH_SIZE=${SCORE_BATCH_SIZE:-1000}
+      - RANDOM_SEED=${RANDOM_SEED:-42}
     volumes:
       - ./models:/app/models  # Persist trained models
       - ./src:/app/src        # Mount source for development
