--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ joblib>=1.3.0,<2.0.0
 
 # Utilities
 python-dotenv>=1.0.0,<2.0.0
+
+# Scheduling (for continuous training)
+apscheduler>=3.10.0,<4.0.0
+pytz>=2023.3
