--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     container_name: tens-insight
     environment:
-      - DATABASE_URL=${DATABASE_URL:-postgresql://goinsight:goinsight_dev_pass@goinsight-postgres:5432/goinsight?sslmode=disable}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://goinsight:goinsight_dev_pass@postgres:5432/goinsight?sslmode=disable}
       - MODELS_DIR=${MODELS_DIR:-/app/models}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - BATCH_SIZE=${BATCH_SIZE:-32}
@@ -15,6 +15,8 @@ services:
       - SCORE_BATCH_SIZE=${SCORE_BATCH_SIZE:-1000}
       - RANDOM_SEED=${RANDOM_SEED:-42}
       - ENABLE_SCHEDULER=${ENABLE_SCHEDULER:-false}
+      - TF_ENABLE_ONEDNN_OPTS=0
+      - TF_CPP_MIN_LOG_LEVEL=2
     volumes:
       - models_volume:/app/models       # Persist trained models
       - ./src:/app/src                  # Mount source for development
@@ -33,7 +35,7 @@ services:
     depends_on:
       - tens-insight
     environment:
-      - DATABASE_URL=${DATABASE_URL:-postgresql://goinsight:goinsight_dev_pass@goinsight-postgres:5432/goinsight?sslmode=disable}
+      - DATABASE_URL=${DATABASE_URL:-postgresql://goinsight:goinsight_dev_pass@postgres:5432/goinsight?sslmode=disable}
       - MODELS_DIR=${MODELS_DIR:-/app/models}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     volumes:
