--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ joblib>=1.3.0,<2.0.0
 
 # Utilities
 python-dotenv>=1.0.0,<2.0.0
+requests>=2.31.0,<3.0.0
 
 # Scheduling (for continuous training)
 apscheduler>=3.10.0,<4.0.0
